# muse

muse2/: CMakeLists.txt
muse2/muse/: CMakeLists.txt  audio.cpp  audio.h  audioframe_t.h  audiostream.cpp  audiostream.h  event.cpp  event.h  eventbase.cpp  eventbase.h  eventlist.cpp  functions.cpp  midievent.cpp  part.cpp  part.h  pos.cpp  pos.h  song.cpp  songfile.cpp  steprec.cpp  sync.cpp  transport.cpp  undo.cpp  undo.h  wave.cpp  wave.h  waveevent.cpp  waveevent.h  xtick.cpp  xtick.h
muse2/muse/arranger/: pcanvas.cpp  tlist.cpp
muse2/muse/waveedit/: wavecanvas.cpp
muse2/soundtouch-bpmdetect/: CMakeLists.txt  README  soundtouch_config.h
